--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-Oliver Samuel <oliversamuel146@gmail.com>
-Dollars Kenthouky <dollarskenthouky@gmail.com>
+Nyaaku Oluwayemisi <oluwayemisinyaaku@gmail.com>
+
